@@ -2,6 +2,7 @@ $Id$
 1.2.6
 	Started adding code for newmsgproc.  It doesn't fully work yet!
 	  Don't use it.
+	Added search, '/' and '?' to basic help.
 	
 1.2.5
 	Patch to fix memory bug in replying to CC messages
